# AngelscriptIDE

./: .gitignore  AngelscriptIDE.pro  AngelscriptIDE.pro.user.3.2-pre1  CMakeLists.txt  README.md  appveyor.yml
Angelscript/: Angelscript.pri  CASInstance.h  CASManager.cpp  CASManager.h  CMakeLists.txt  CScriptFile.cpp  CScriptFile.h  IConfigurationManager.h
Angelscript/add_on/: Angelscript.add_on.pri  CMakeLists.txt
Angelscript/include/: Angelscript.include.pri
Angelscript/source/: Angelscript.source.pri  CMakeLists.txt
cmake/: QtFormsFilesList.cmake
ide/: CASIDEApp.cpp  CASIDEApp.h  CConfigurationManager.h  CMakeLists.txt  COptions.cpp  ide.pri
launcher/: CLauncher.cpp  CLauncher.h  LauncherException.h  launcher.pri
main/: CMakeLists.txt  main.pri
resources/configs/: default_syntax_highlights.ini
src/: CMakeLists.txt
src/Angelscript/: CASCompilerThread.cpp  CASCompilerThread.h  CASConfigModuleBuilder.cpp  CASConfigModuleBuilder.h  CASDevEnvironment.cpp  CASDevEnvironment.h  CASEngineInstance.cpp  CASEngineInstance.h  CASInstance.cpp  CASInstance.h  CASManager.cpp  CASManager.h  CConfiguration.cpp  CConfiguration.h  CConfigurationException.h  CConfigurationManager.cpp  CConfigurationManager.h  CMakeLists.txt  CScript.cpp  CScript.h  CScriptFile.h  ConfigurationException.h  IASCompilerListener.h  IASEventListener.h  IConfigurationEventListener.h  IConfigurationManager.h  IDE_API.cpp  IDE_API.h  IncludeCallback.cpp  IncludeCallback.h
src/Angelscript/ScriptAPI/: ASIConfiguration.cpp  ASIConfiguration.h  ASScriptEngineAPI.cpp  ASScriptEngineAPI.h  ASTypes.cpp  ASTypes.h  CMakeLists.txt
src/Angelscript/include/: CMakeLists.txt
src/ide/: CASIDEApp.cpp  CASIDEApp.h  CConfigurationManager.cpp  CConfigurationManager.h  CMakeLists.txt  COptions.cpp  COptions.h
src/launcher/: CLauncher.cpp  CLauncher.h  CLauncherException.h  CMakeLists.txt  LauncherException.h
src/main/: CMakeLists.txt  Main.cpp  Main.h
src/ui/: CASMainWindow.cpp  CASMainWindow.h  CASMainWindow.ui  CAbout.cpp  CAbout.h  CAbout.ui  CAngelscriptSyntaxHighlighter.cpp  CAngelscriptSyntaxHighlighter.h  CBaseOutputWidget.cpp  CBaseOutputWidget.h  CCodeTextEdit.cpp  CCodeTextEdit.h  CCompileOutputWidget.cpp  CCompileOutputWidget.h  CFindDialog.cpp  CFindDialog.h  CInformationOutputWidget.cpp  CInformationOutputWidget.h  CLineNumberArea.h  CMakeLists.txt  COutputWidget.cpp  COutputWidget.h  COutputWidget.ui  CScriptCodeTextEdit.cpp  CScriptCodeTextEdit.h  CUI.cpp  CUI.h
src/ui/options/: CBaseOptionsWidget.cpp  CBaseOptionsWidget.h  CConfigurationsWidget.cpp  CConfigurationsWidget.h  CConfigurationsWidget.ui  CEditConfigurationsDialog.cpp  CEditConfigurationsDialog.h  CGeneralWidget.cpp  CGeneralWidget.h  CMakeLists.txt  COptionsDialog.cpp  COptionsDialog.h  COptionsDialog.ui  CSyntaxHighlightWidget.cpp  CSyntaxHighlightWidget.h  CSyntaxHighlightWidget.ui
src/ui/util/: UIUtils.h
src/util/: CBaseApp.cpp  CBaseApp.h  CDispatchingOutStream.h  CListenerManager.h  CMakeLists.txt  COutStream.h  CProperties.h  IAppListener.h  IUI.h  StringUtils.cpp  StringUtils.h
ui/: CASMainWindow.h  CBaseOutputWidget.h  CFindDialog.h  CFindDialog.ui  CInformationOutputWidget.cpp  CInformationOutputWidget.h  CLineNumberArea.cpp  COutputWidget.cpp  COutputWidget.h  CScriptCodeTextEdit.cpp  CScriptCodeTextEdit.h  CUI.cpp  ui.pri
ui/options/: CConfigurationsWidget.cpp  CEditConfigurationsDialog.ui  CGeneralWidget.cpp  CGeneralWidget.h  CGeneralWidget.ui  COptionsDialog.cpp  ui.options.pri
ui/util/: CMakeLists.txt  UIUtils.cpp  UIUtils.h  ui.util.pri
util/: CBaseApp.cpp  CListenerManager.h  CMakeLists.txt  COutStream.h  CProperties.cpp  IAppListener.h  util.pri
