add_sources(
	CASConfigModuleBuilder.cpp
	CASConfigModuleBuilder.h
	CASDevEnvironment.cpp
	CASDevEnvironment.h
	CASEngineInstance.cpp
	CASEngineInstance.h
	CConfiguration.cpp
	CConfiguration.h
	CConfigurationException.h
	CConfigurationManager.cpp
	CConfigurationManager.h
	CScript.cpp
	CScript.h
	IDE_API.cpp
	IDE_API.h
	IncludeCallback.cpp
	IncludeCallback.h
)

add_subdirectory( ScriptAPI )
