add_sources(
	CASCompilerThread.cpp
	CASCompilerThread.h
	CASConfigModuleBuilder.cpp
	CASConfigModuleBuilder.h
	CASDevEnvironment.cpp
	CASDevEnvironment.h
	CASEngineInstance.cpp
	CASEngineInstance.h
	CConfiguration.cpp
	CConfiguration.h
	CConfigurationException.h
	CConfigurationManager.cpp
	CConfigurationManager.h
	IDE_API.cpp
	IDE_API.h
	IncludeCallback.cpp
	IncludeCallback.h
)

add_subdirectory( ScriptAPI )
